Adjusted href to fetch the image

--- a/ANIRUTH.html
+++ b/ANIRUTH.html
@@ -9,7 +9,7 @@
     <H2>SPOTSTAR - Anirudh</H2>
     <table>
         <tr>
-            <th><img src="../MEDIA/IMAGES/music directors/ANIRUTH/ANIRUTH.jpg" alt="" width="200" height="250"></th>
+            <th><img src=" /MEDIA/IMAGES/music directors/ANIRUTH/ANIRUTH.jpg" alt="" width="200" height="250"></th>
             <th>Anirudh Ravichande also credited mononymously as Anirudh, is an Indian music composer and playback singer who works primarily in Tamil cinema. He has also composed music for few Hindi and Telugu films. He has won two Filmfare Awards South, nine SIIMA Awards, six Edison Awards and five Vijay Awards.</th>
         </tr>
         </table>
@@ -21,19 +21,19 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/music directors/ANIRUTH/jailer.jpg"alt="" height="200" width="150">
+                <img src=" /MEDIA/IMAGES/music directors/ANIRUTH/jailer.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/aniruth/jailer.mp3" controls ></audio>
                 </td>
-                <td><img src="../MEDIA/IMAGES/music directors/ANIRUTH/3.jpg"alt="" height="200" 
+                <td><img src=" /MEDIA/IMAGES/music directors/ANIRUTH/3.jpg"alt="" height="200" 
                     width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/aniruth/3.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/ANIRUTH/ethirneechal.jpg"
+                    <img src=" /MEDIA/IMAGES/music directors/ANIRUTH/ethirneechal.jpg"
                     alt="" height="200" width="150">
                 </td>
                 
@@ -41,20 +41,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="../MEDIA/IMAGES/music directors/ANIRUTH/kvrk.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/music directors/ANIRUTH/kvrk.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/music directors/aniruth/kvrk.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/music directors/ANIRUTH/master.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/music directors/ANIRUTH/master.jpg"alt="" height="200" width="150">
 
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/music directors/aniruth/master.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/music directors/ANIRUTH/nrt.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/music directors/ANIRUTH/nrt.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/music directors/aniruth/nrt.mpeg" controls></audio>
@@ -62,19 +62,19 @@
                 </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/ANIRUTH/petta.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/music directors/ANIRUTH/petta.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/aniruth/petta.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/ANIRUTH/remo.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/music directors/ANIRUTH/remo.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/aniruth/remo.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/ANIRUTH/vip.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/music directors/ANIRUTH/vip.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/aniruth/vip.mpeg" controls></audio>
