--- a/NA MUTHUKUMAR.html
+++ b/NA MUTHUKUMAR.html
@@ -10,7 +10,7 @@
     <H2>SPOTSTAR - 	Na. Muthukumar </H2>
     <table>
         <tr>
-            <th><img src="../MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/NA muthukumar.jpg" alt="" width="200" height="250"></th>
+            <th><img src=" /MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/NA muthukumar.jpg" alt="" width="200" height="250"></th>
             <th>Nagarajan Muthukumar (12 July 1975 – 14 August 2016) was a Tamil poet, lyricist, and author. Best known for his Tamil language film songs, he received the most Filmfare Awards for Best Lyricist in Tamil and was a two-time recipient of the National Film Award for Best Lyrics for his works[1] in Thanga Meenkal (2013) and Saivam (2014). He Has Won Two National Film Awards, Four Tamil Nadu State Film Awards, and Four Filmfare Awards South respectively.</th>
         </tr>
         </table>
@@ -23,19 +23,19 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/Alagu kutty chellam.jpg"alt="" height="200" width="150">
+                <img src=" /MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/Alagu kutty chellam.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/NA MUTHUKUMAR/Azhagu-Kutty-Chellam.mp3" controls ></audio>
                 </td>
-                <td><img src="../MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/Dhaam-Dhoom.jpg"alt="" height="200" 
+                <td><img src=" /MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/Dhaam-Dhoom.jpg"alt="" height="200" 
                     width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/NA MUTHUKUMAR/Anbe-En-Anbe-MassTamilan.fm.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/En-Jeevan.jpg"
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/En-Jeevan.jpg"
                     alt="" height="200" width="150">
                 </td>
                 
@@ -43,20 +43,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="../MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/En-Kadhal-Solla.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/En-Kadhal-Solla.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/lyricsist/NA MUTHUKUMAR/En-Kadhal-Solla.mp3" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/Innum-Oru-Iravu.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/Innum-Oru-Iravu.jpg"alt="" height="200" width="150">
 
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/lyricsist/NA MUTHUKUMAR/Innum-Oru-Iravu-MassTamilan.com.mp3" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/pesugiren pesugiren.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/pesugiren pesugiren.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/lyricsist/NA MUTHUKUMAR/Pesugiren-Pesugiren.mp3" controls></audio>
@@ -64,19 +64,19 @@
                 </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/soora theenga .jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/soora theenga .jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/NA MUTHUKUMAR/Soora Thenga Addra.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/Unn-Perai-Sollum pothae.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/Unn-Perai-Sollum pothae.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/NA MUTHUKUMAR/Unn-Perai-Sollum.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/yedho ninaikiran.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/NA MUTHUKUMAR/yedho ninaikiran.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/NA MUTHUKUMAR/Yedho-Ninaikiren-MassTamilan.com.mp3" controls></audio>
