--- a/SIVAKARTHIKEYANsongs.html
+++ b/SIVAKARTHIKEYANsongs.html
@@ -9,7 +9,7 @@
     <H2>SPOTSTAR - Sivakarthikeyan</H2>
     <table>
         <tr>
-            <th><img src="../MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/SIVAKARTHIKEYAN.jpeg" alt="" width="200" height="250"></th>
+            <th><img src=" /MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/SIVAKARTHIKEYAN.jpeg" alt="" width="200" height="250"></th>
             <th>Sivakarthikeyan (born 17 February 1985), also known by the initialism SK, is an Indian actor, film producer, playback singer, lyricist and television presenter, who works predominantly in Tamil films. He is a recipient of a Tamil Nadu State Film Award, four Edison Awards, four SIIMA Awards, and two other Vijay Awards.</th>
         </tr>
         </table>
@@ -21,19 +21,19 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/doctor.jpg"alt="" height="200" width="150">
+                <img src=" /MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/doctor.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/sivakarthikeyan/doctor.mp3" controls ></audio>
                 </td>
-                <td><img src="../MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/DON.jpeg"alt="" height="200" 
+                <td><img src=" /MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/DON.jpeg"alt="" height="200" 
                     width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/sivakarthikeyan/Bae.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/maankarate.jpg"
+                    <img src=" /MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/maankarate.jpg"
                     alt="" height="200" width="150">
                 </td>
                 
@@ -41,20 +41,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="../MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/remo.jpeg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/remo.jpeg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/sivakarthikeyan/remo.mp3" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/Seemaraja.jpeg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/Seemaraja.jpeg"alt="" height="200" width="150">
 
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/sivakarthikeyan/seemaraja.mp3" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/doctor.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/doctor.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/sivakarthikeyan/doctor1.mp3" controls></audio>
@@ -62,19 +62,19 @@
                 </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/varuthapadatha valibar sangam.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/varuthapadatha valibar sangam.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/sivakarthikeyan/vpvs.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/velaikaran.jpeg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/velaikaran.jpeg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/sivakarthikeyan/Iraiva - SenSongsMp3.Co.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/maankarate.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/actors/SIVAKARTHIKEYAN/maankarate.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/sivakarthikeyan/Un Vizhigalil(SenSongsMp3.Co) (1).mp3" controls></audio>
