--- a/THAMARAI.html
+++ b/THAMARAI.html
@@ -11,7 +11,7 @@
         Thamarai </H2>
     <table>
         <tr>
-            <th><img src="../MEDIA/IMAGES/LYRICSIST/THAMARAI/Thamarai.jpg" alt="" width="200" height="250"></th>
+            <th><img src=" /MEDIA/IMAGES/LYRICSIST/THAMARAI/Thamarai.jpg" alt="" width="200" height="250"></th>
             <th>Thamarai (born 10 November 1965) is an Indian poet and lyricist who writes in Tamil. She is a prominent figure in the Tamil literary world and has worked in Tamil cinema.She made her debut in the Tamil film industry through the 1998 film Iniyavale, which was directed by Seeman and had music composed by Deva. </th>
         </tr>
         </table>
@@ -23,19 +23,19 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/LYRICSIST/THAMARAI/Kaakha-Kaakha.jpg"alt="" height="200" width="150">
+                <img src=" /MEDIA/IMAGES/LYRICSIST/THAMARAI/Kaakha-Kaakha.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/THAMARAI/Ondra-Iranda.mp3" controls ></audio>
                 </td>
-                <td><img src="../MEDIA/IMAGES/LYRICSIST/THAMARAI/Kangal-Irandal.jpg"alt="" height="200" 
+                <td><img src=" /MEDIA/IMAGES/LYRICSIST/THAMARAI/Kangal-Irandal.jpg"alt="" height="200" 
                     width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/THAMARAI/Kangal-Irandal.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/THAMARAI/Mallipoo.jpg"
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/THAMARAI/Mallipoo.jpg"
                     alt="" height="200" width="150">
                 </td>
                 
@@ -43,20 +43,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="../MEDIA/IMAGES/LYRICSIST/THAMARAI/Mundhinam-Parthene.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/LYRICSIST/THAMARAI/Mundhinam-Parthene.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/lyricsist/THAMARAI/Mundhinam-Parthene-MassTamilan.com.mp3" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/LYRICSIST/THAMARAI/NRT.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/LYRICSIST/THAMARAI/NRT.jpg"alt="" height="200" width="150">
 
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/lyricsist/THAMARAI/Neeyum-Naanum.mp3" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/LYRICSIST/THAMARAI/Thalli-Pogathey.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/LYRICSIST/THAMARAI/Thalli-Pogathey.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/lyricsist/THAMARAI/Thalli-Pogathey.mp3" controls></audio>
@@ -64,19 +64,19 @@
                 </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/THAMARAI/Vaaranam-Aayiram.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/THAMARAI/Vaaranam-Aayiram.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/THAMARAI/Ava-Enna-Enna-MassTamilan.com.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/THAMARAI/Vaseegara.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/THAMARAI/Vaseegara.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/THAMARAI/Vaseegara.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/THAMARAI/vettaiyadu-villaiyadu-et00000194-1687413956.avif"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/THAMARAI/vettaiyadu-villaiyadu-et00000194-1687413956.avif"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/THAMARAI/Partha-Muthal.mp3" controls></audio>
