--- a/dhanush.html
+++ b/dhanush.html
@@ -9,7 +9,7 @@
     <H2>SPOTSTAR - Dhanush</H2>
     <table>
         <tr>
-            <th><img src="../MEDIA/IMAGES/actors/dhanush/DHANUSHH.jpeg" alt="" width="200" height="250"></th>
+            <th><img src=" /MEDIA/IMAGES/actors/dhanush/DHANUSHH.jpeg" alt="" width="200" height="250"></th>
             <th>Venkatesh Prabhu Kasthuri Raja (born 28 July 1983)known professionally as Dhanush, is an Indian actor, producer, director, lyricist and playback singer who primarily works in Tamil cinema.Having starred in 46 films over his career, his accolades include four National Film Awards (two as actor and two as producer), fourteen SIIMA Awards, seven Filmfare Awards South and a Filmfare Award.One of the highest paid actors in Indian cinema, he has been included in the Forbes India Celebrity 100 list six times.</th>
         </tr>
         </table>
@@ -21,19 +21,19 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/actors/dhanush/Chill bro HD IMAGE.jpg"alt="" height="200" width="150">
+                <img src=" /MEDIA/IMAGES/actors/dhanush/Chill bro HD IMAGE.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/DHANUSH/Chill-Bro-MassTamilan.io.mp3" controls ></audio>
                 </td>
-                <td><img src="../MEDIA/IMAGES/actors/dhanush/Dhanush captain miller poster.jpg"alt="" height="200" 
+                <td><img src=" /MEDIA/IMAGES/actors/dhanush/Dhanush captain miller poster.jpg"alt="" height="200" 
                     width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/DHANUSH/Killer-Killer-MassTamilan.dev.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/actors/dhanush/Karnan Photos - Tamil Movies photos, images, gallery, stills, clips - IndiaGlitz_com.jpg"
+                    <img src=" /MEDIA/IMAGES/actors/dhanush/Karnan Photos - Tamil Movies photos, images, gallery, stills, clips - IndiaGlitz_com.jpg"
                     alt="" height="200" width="150">
                 </td>
                 
@@ -41,20 +41,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="../MEDIA/IMAGES/actors/dhanush/Latest asuran images download.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/actors/dhanush/Latest asuran images download.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/DHANUSH/Ellu-Vaya-Pookalaye-MassTamilan.org.mp3" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/actors/dhanush/Mariyaan.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/actors/dhanush/Mariyaan.jpg"alt="" height="200" width="150">
 
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/DHANUSH/Kadal-Raasa-Naan.mp3" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/actors/dhanush/Pudhupettai.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/actors/dhanush/Pudhupettai.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/DHANUSH/Oru-Naalil---Composer's-Dream-Mix.mp3" controls></audio>
@@ -62,19 +62,19 @@
                 </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/actors/dhanush/Thaai Kelavi.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/actors/dhanush/Thaai Kelavi.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/DHANUSH/Thaai-Kelavi-MassTamilan.dev.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/actors/dhanush/Yaaradi Neemogini.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/actors/dhanush/Yaaradi Neemogini.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/DHANUSH/Venmegam-Pennaga.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/actors/dhanush/maari.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/actors/dhanush/maari.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/DHANUSH/Rowdy Baby - SenSongsMp3.Co.mp3" controls></audio>
