--- a/shankarmahadevan.html
+++ b/shankarmahadevan.html
@@ -10,7 +10,7 @@
     <H2>SPOTSTAR - 	Shankar Mahadevan </H2>
     <table>
         <tr>
-            <th><img src="../MEDIA/IMAGES/playback singer/shankar mahadevan/shankar mahadevan.jpg" alt="" width="200" height="250"></th>
+            <th><img src=" /MEDIA/IMAGES/playback singer/shankar mahadevan/shankar mahadevan.jpg" alt="" width="200" height="250"></th>
             <th>Shankar Mahadevan (born 3 March 1967) is an Indian singer and composer who is part of the Shankar–Ehsaan–Loy trio that writes music for Indian films. In 2023, he was awarded a honorary doctorate (honoris causa degree) by Birmingham City University.</th>
         </tr>
         </table>
@@ -22,19 +22,19 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/playback singer/shankar mahadevan/anegan.jpg"alt="" height="200" width="150">
+                <img src=" /MEDIA/IMAGES/playback singer/shankar mahadevan/anegan.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/shankar mahadevan/anegan.mpeg" controls ></audio>
                 </td>
-                <td><img src="../MEDIA/IMAGES/playback singer/shankar mahadevan/araumbam.jpg"alt="" height="200" 
+                <td><img src=" /MEDIA/IMAGES/playback singer/shankar mahadevan/araumbam.jpg"alt="" height="200" 
                     width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/shankar mahadevan/arrabam.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/shankar mahadevan/citizen.jpg"
+                    <img src=" /MEDIA/IMAGES/playback singer/shankar mahadevan/citizen.jpg"
                     alt="" height="200" width="150">
                 </td>
                 
@@ -42,20 +42,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="../MEDIA/IMAGES/playback singer/shankar mahadevan/ghajini.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/playback singer/shankar mahadevan/ghajini.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/playback singers/shankar mahadevan/ghajini.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/playback singer/shankar mahadevan/Indru Netru Naalai.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/playback singer/shankar mahadevan/Indru Netru Naalai.jpg"alt="" height="200" width="150">
 
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/playback singers/shankar mahadevan/netru indru naalai.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/playback singer/shankar mahadevan/lal salam.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/playback singer/shankar mahadevan/lal salam.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/playback singers/shankar mahadevan/lal salam.mpeg" controls></audio>
@@ -63,19 +63,19 @@
                 </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/shankar mahadevan/Raavanan ·.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/playback singer/shankar mahadevan/Raavanan ·.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/shankar mahadevan/ravanan.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/shankar mahadevan/thirumalai.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/playback singer/shankar mahadevan/thirumalai.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/shankar mahadevan/thirumalai.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/shankar mahadevan/vkk.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/playback singer/shankar mahadevan/vkk.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/shankar mahadevan/vkk.mpeg" controls></audio>
