--- a/updationmsg.html
+++ b/updationmsg.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="../MEDIA/IMAGES/REGISTRATION MSG/CRP-6-Registration-successful.jpg" height="250">
+    <img src=" /MEDIA/IMAGES/REGISTRATION MSG/CRP-6-Registration-successful.jpg" height="250">
     <h2>Password updated Sucessfully</h2>
 </body>
 </html>
