--- a/vaali.html
+++ b/vaali.html
@@ -10,7 +10,7 @@
     <H2>SPOTSTAR -Vaali </H2>
     <table>
         <tr>
-            <th><img src="../MEDIA/IMAGES/LYRICSIST/VAALI/VAALI.jpg" alt="" width="200" height="250"></th>
+            <th><img src=" /MEDIA/IMAGES/LYRICSIST/VAALI/VAALI.jpg" alt="" width="200" height="250"></th>
             <th>Tiruchirapalli Srinivasan Rangarajan, professionally credited by his pseudonym Vaali (29 October 1931 – 18 July 2013) was an Indian poet who has the record for writing the most songs in Tamil cinema. He is also recognised for a five-decade long association in the Tamil film industry and has written over 15,000 songs.He acted in a number of films, including Sathya, Hey Ram, Paarthale Paravasam and Poikkal Kudhirai. He was honoured by the Government of India with the Padma Shri, India's fourth highest civilian honour in 2007. </th>
         </tr>
         </table>
@@ -22,19 +22,19 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/LYRICSIST/VAALI/Ella-Pugazhum.jpg"alt="" height="200" width="150">
+                <img src=" /MEDIA/IMAGES/LYRICSIST/VAALI/Ella-Pugazhum.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/VAALI/Ella-Pugazhum-MassTamilan.fm.mp3" controls ></audio>
                 </td>
-                <td><img src="../MEDIA/IMAGES/LYRICSIST/VAALI/Ethir-Neechal.jpg"alt="" height="200" 
+                <td><img src=" /MEDIA/IMAGES/LYRICSIST/VAALI/Ethir-Neechal.jpg"alt="" height="200" 
                     width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/VAALI/Ethir-Neechal.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/VAALI/Machi-Open-The-Bottle.jpg"
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/VAALI/Machi-Open-The-Bottle.jpg"
                     alt="" height="200" width="150">
                 </td>
                 
@@ -42,20 +42,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="../MEDIA/IMAGES/LYRICSIST/VAALI/Marudhaani-Marudhaani.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/LYRICSIST/VAALI/Marudhaani-Marudhaani.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
-                        <audio src="../MEDIA/IMAGES/LYRICSIST/VAALI/Marudhaani-Marudhaani.jpg" controls></audio>
+                        <audio src=" /MEDIA/IMAGES/LYRICSIST/VAALI/Marudhaani-Marudhaani.jpg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/LYRICSIST/VAALI/Nanbanae.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/LYRICSIST/VAALI/Nanbanae.jpg"alt="" height="200" width="150">
 
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/lyricsist/VAALI/Nanbane.mp3" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/LYRICSIST/VAALI/netru aval.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/LYRICSIST/VAALI/netru aval.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/lyricsist/VAALI/Netru-Aval-Irundhal.mp3" controls></audio>
@@ -63,19 +63,19 @@
                 </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/VAALI/Sonapareeya.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/VAALI/Sonapareeya.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/VAALI/Sonapareeya.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/VAALI/Thee illai.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/VAALI/Thee illai.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/VAALI/Thee-Illai.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/VAALI/Velicha-Poove.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/VAALI/Velicha-Poove.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/VAALI/Velicha-Poove.mp3" controls></audio>
