--- a/vijayantony.html
+++ b/vijayantony.html
@@ -21,19 +21,19 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/music directors/VIJAY ANTONY/haridas.jpg"alt="" height="200" width="150">
+                <img src=" /MEDIA/IMAGES/music directors/VIJAY ANTONY/haridas.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/vijayantony/haridas.mpeg" controls ></audio>
                 </td>
-                <td><img src="../MEDIA/IMAGES/music directors/VIJAY ANTONY/india pakisthsn.jpg"alt="" height="200" 
+                <td><img src=" /MEDIA/IMAGES/music directors/VIJAY ANTONY/india pakisthsn.jpg"alt="" height="200" 
                     width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/vijayantony/india pakisthan.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/VIJAY ANTONY/kadhalil viluden.jpg"
+                    <img src=" /MEDIA/IMAGES/music directors/VIJAY ANTONY/kadhalil viluden.jpg"
                     alt="" height="200" width="150">
                 </td>
                 
@@ -41,20 +41,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="../MEDIA/IMAGES/music directors/VIJAY ANTONY/pichaikaran.webp"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/music directors/VIJAY ANTONY/pichaikaran.webp"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/music directors/vijayantony/pichaikaran2.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/music directors/VIJAY ANTONY/romeo.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/music directors/VIJAY ANTONY/romeo.jpg"alt="" height="200" width="150">
 
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/music directors/vijayantony/romeo.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/music directors/VIJAY ANTONY/saitan.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/music directors/VIJAY ANTONY/saitan.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/music directors/vijayantony/saithan.mpeg" controls></audio>
@@ -62,19 +62,19 @@
                 </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/VIJAY ANTONY/Uthama Puthiran.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/music directors/VIJAY ANTONY/Uthama Puthiran.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/vijayantony/uthama puthiran.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/VIJAY ANTONY/velaayudham.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/music directors/VIJAY ANTONY/velaayudham.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/vijayantony/velaayutham.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/VIJAY ANTONY/vettaikaran.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/music directors/VIJAY ANTONY/vettaikaran.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/vijayantony/vettaikaran.mpeg" controls></audio>
