--- a/yuvan.html
+++ b/yuvan.html
@@ -9,7 +9,7 @@
     <H2>SPOTSTAR - Yuvan Shankar Raja</H2>
     <table>
         <tr>
-            <th><img src="../MEDIA/IMAGES/music directors/YUVAN/yuvan.jpg" alt="" width="200" height="250"></th>
+            <th><img src=" /MEDIA/IMAGES/music directors/YUVAN/yuvan.jpg" alt="" width="200" height="250"></th>
             <th>Yuvan Shankar Raja (born 31 August 1979) is an Indian film score and soundtrack composer and singer-songwriter. He mainly scores music for Tamil films along with few Telugu, Kannada, and Hindi films. Considered a versatile composer, he is particularly known for his use of Western music elements and often credited with having introduced hip hop to the Tamil film and music industry and started the "era of remixes" in Tamil Nadu] which included mixed EDM and jazz. He is frequently referred to as the "BGM King" and the "Young Maestro" of Tamil Film Music. Yuvan has won two Filmfare Awards South, five Mirchi Music Awards South, three Vijay Awards and two Tamil Nadu State Film Awards..</th>
         </tr>
         </table>
@@ -21,19 +21,19 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/music directors/YUVAN/anjaan.jpg"alt="" height="200" width="150">
+                <img src=" /MEDIA/IMAGES/music directors/YUVAN/anjaan.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/yuvan/anjaan.mpeg"controls ></audio>
                 </td>
-                <td><img src="../MEDIA/IMAGES/music directors/YUVAN/lovetoday.jpg"alt="" height="200" 
+                <td><img src=" /MEDIA/IMAGES/music directors/YUVAN/lovetoday.jpg"alt="" height="200" 
                     width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/yuvan/lovetoday.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/YUVAN/manmadhan.jpg"
+                    <img src=" /MEDIA/IMAGES/music directors/YUVAN/manmadhan.jpg"
                     alt="" height="200" width="150">
                 </td>
                 
@@ -41,20 +41,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="../MEDIA/IMAGES/music directors/YUVAN/MAANADU.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/music directors/YUVAN/MAANADU.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/music directors/yuvan/MAANADU.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/music directors/YUVAN/NGK.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/music directors/YUVAN/NGK.jpg"alt="" height="200" width="150">
 
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/music directors/yuvan/NGK.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/music directors/YUVAN/paiya.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/music directors/YUVAN/paiya.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/music directors/yuvan/paiyaa.mpeg" controls></audio>
@@ -62,19 +62,19 @@
                 </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/YUVAN/paruthiveeran.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/music directors/YUVAN/paruthiveeran.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/yuvan/paruthiveeran.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/YUVAN/PPK.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/music directors/YUVAN/PPK.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/yuvan/PPK.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/YUVAN/sarvam.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/music directors/YUVAN/sarvam.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/yuvan/sarvam.mpeg" controls></audio>
