--- a/ARR.html
+++ b/ARR.html
@@ -9,7 +9,7 @@
     <H2>SPOTSTAR - AR RAHMAN</H2>
     <table>
         <tr>
-            <th><img src="../MEDIA/IMAGES/music directors/ARR/ARR.jpg" alt="" width="200" height="250"></th>
+            <th><img src=" /MEDIA/IMAGES/music directors/ARR/ARR.jpg" alt="" width="200" height="250"></th>
             <th>Allah Rakha Rahman is an Indian music composer, record producer, singer, songwriter, musician, multi-instrumentalist and philanthropist, popular for his works in Indian cinema; predominantly in Tamil and Hindi films, with occasional forays in international cinema. He is a winner of six National Film Awards, two Academy Awards, two Grammy Awards, a BAFTA Award, a Golden Globe Award, fifteen Filmfare Awards and seventeen Filmfare Awards South.In 2010, the Indian government conferred him with the Padma Bhushan, the nation's third-highest civilian award.</th>
         </tr>
         </table>
@@ -21,19 +21,19 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/music directors/ARR/24.jpg"alt="" height="200" width="150">
+                <img src=" /MEDIA/IMAGES/music directors/ARR/24.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/ARR/24.mpeg"controls ></audio>
                 </td>
-                <td><img src="../MEDIA/IMAGES/music directors/ARR/alaipayuthey.jpg"alt="" height="200" 
+                <td><img src=" /MEDIA/IMAGES/music directors/ARR/alaipayuthey.jpg"alt="" height="200" 
                     width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/ARR/ALAIPAYUTHEY.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/ARR/ayutha eluthu.jpg"
+                    <img src=" /MEDIA/IMAGES/music directors/ARR/ayutha eluthu.jpg"
                     alt="" height="200" width="150">
                 </td>
                 
@@ -41,20 +41,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="../MEDIA/IMAGES/music directors/ARR/bigil.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/music directors/ARR/bigil.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/music directors/ARR/BIGIL.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/music directors/ARR/cobra.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/music directors/ARR/cobra.jpg"alt="" height="200" width="150">
 
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/music directors/ARR/COBRA.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/music directors/ARR/csv.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/music directors/ARR/csv.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/music directors/ARR/CSV.mpeg" controls></audio>
@@ -62,19 +62,19 @@
                 </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/ARR/enthiran.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/music directors/ARR/enthiran.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/ARR/ENTHIRAN.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/ARR/i.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/music directors/ARR/i.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/ARR/I.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/ARR/jodhaakbar.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/music directors/ARR/jodhaakbar.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/ARR/JODHAAKBAR.mpeg" controls></audio>
