--- a/JONITA.html
+++ b/JONITA.html
@@ -10,7 +10,7 @@
     <H2>SPOTSTAR - 	Jonita Gandhi </H2>
     <table>
         <tr>
-            <th><img src="../MEDIA/IMAGES/playback singer/jonita/jonita.jpg" alt="" width="200" height="250"></th>
+            <th><img src=" /MEDIA/IMAGES/playback singer/jonita/jonita.jpg" alt="" width="200" height="250"></th>
             <th>Jonita Gandhi (born October 23, 1989) is a Canadian singer of Indian descent.She has recorded songs predominantly in Hindi and Tamil languages with few in Punjabi, Telugu, Marathi, Gujarati, Bengali, Kannada and Malayalam languages. Some of her most acclaimed songs include "The Breakup Song", "Mental Manadhil", "Chellama" and "Arabic Kuthu". She is also well known for her YouTube presence. Her singing debut started through Chennai Express in 2013.</th>
         </tr>
         </table>
@@ -22,19 +22,19 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/playback singer/jonita/24.jpg"alt="" height="200" width="150">
+                <img src=" /MEDIA/IMAGES/playback singer/jonita/24.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/jonita/234.mpeg" controls ></audio>
                 </td>
-                <td><img src="../MEDIA/IMAGES/playback singer/jonita/beast.jpg"alt="" height="200" 
+                <td><img src=" /MEDIA/IMAGES/playback singer/jonita/beast.jpg"alt="" height="200" 
                     width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/jonita/beast.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/jonita/doctor.jpg"
+                    <img src=" /MEDIA/IMAGES/playback singer/jonita/doctor.jpg"
                     alt="" height="200" width="150">
                 </td>
                 
@@ -42,20 +42,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="../MEDIA/IMAGES/playback singer/jonita/kaapaan.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/playback singer/jonita/kaapaan.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/playback singers/jonita/kaapan.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/playback singer/jonita/kaatru veliyidai.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/playback singer/jonita/kaatru veliyidai.jpg"alt="" height="200" width="150">
 
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/playback singers/jonita/katruveliyidai.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/playback singer/jonita/sarkar.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/playback singer/jonita/sarkar.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/playback singers/jonita/sarkar.mpeg" controls></audio>
@@ -63,19 +63,19 @@
                 </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/jonita/varisu.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/playback singer/jonita/varisu.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/jonita/varisu.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/jonita/velaikaran.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/playback singer/jonita/velaikaran.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/jonita/velaikaran.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/jonita/private party.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/playback singer/jonita/private party.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/jonita/private party.mpeg" controls></audio>
