--- a/PA-VIJAY.html
+++ b/PA-VIJAY.html
@@ -9,7 +9,7 @@
     <H2>SPOTSTAR - Pa. Vijay </H2>
     <table>
         <tr>
-            <th><img src="../MEDIA/IMAGES/LYRICSIST/pa vijay/pa-vijay.jpg" alt="" width="200" height="250"></th>
+            <th><img src=" /MEDIA/IMAGES/LYRICSIST/pa vijay/pa-vijay.jpg" alt="" width="200" height="250"></th>
             <th>Pa. Vijay is an Indian lyricist, poet, writer, director, producer and film actor who predominantly works in Tamil cinema. He won the National Film Award for Best Lyrics in India for his song Ovvoru Pookalume in Cheran's Autograph (2004)</th>
         </tr>
         </table>
@@ -21,19 +21,19 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/LYRICSIST/pa vijay/Adadada-Arrambame.jpg"alt="" height="200" width="150">
+                <img src=" /MEDIA/IMAGES/LYRICSIST/pa vijay/Adadada-Arrambame.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/PA vijay/Adadada-Arrambame-MassTamilan.dev.mp3" controls ></audio>
                 </td>
-                <td><img src="../MEDIA/IMAGES/LYRICSIST/pa vijay/Angnyaade.jpg"" height="200" 
+                <td><img src=" /MEDIA/IMAGES/LYRICSIST/pa vijay/Angnyaade.jpg"" height="200" 
                     width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/PA vijay/Angnyaade.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/pa vijay/Hasili-Fisiliye.jpg"
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/pa vijay/Hasili-Fisiliye.jpg"
                     alt="" height="200" width="150">
                 </td>
                 
@@ -41,20 +41,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="../MEDIA/IMAGES/LYRICSIST/pa vijay/Kilimanjaro.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/LYRICSIST/pa vijay/Kilimanjaro.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/lyricsist/PA vijay/Kilimanjaro.mp3" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/LYRICSIST/pa vijay/lovepannalama vendama.webp"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/LYRICSIST/pa vijay/lovepannalama vendama.webp"alt="" height="200" width="150">
 
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/lyricsist/PA vijay/Love-Panalaama-Venaama.mp3" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/LYRICSIST/pa vijay/Ovoru-Pookalume.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/LYRICSIST/pa vijay/Ovoru-Pookalume.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/lyricsist/PA vijay/Ovoru-Pookalume.mp3" controls></audio>
@@ -62,19 +62,19 @@
                 </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/pa vijay/swasame.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/pa vijay/swasame.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/PA vijay/Swasame-Swasame-MassTamilan.com.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/pa vijay/theeyae theeyae.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/pa vijay/theeyae theeyae.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/PA vijay/Theeyae-Theeyae.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/pa vijay/Thoovaanam.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/pa vijay/Thoovaanam.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/PA vijay/Thoovaanam.mp3" controls></audio>
