--- a/SURYASONGS.html
+++ b/SURYASONGS.html
@@ -9,7 +9,7 @@
     <H2>SPOTSTAR - Surya</H2>
     <table>
         <tr>
-            <th><img src="../MEDIA/IMAGES/actors/SURYA/SURYA.jpeg" alt="" width="200" height="250"></th>
+            <th><img src=" /MEDIA/IMAGES/actors/SURYA/SURYA.jpeg" alt="" width="200" height="250"></th>
             <th>Saravanan Sivakumar (born 23 July 1975), known by his stage name Suriya, is an Indian actor and film producer. He primarily works in Tamil cinema where he is one of the highest paid actors.] He has received numerous awards including two National Film Awards, six Filmfare Awards South, five Tamil Nadu State Film Awards and two South Indian International Movie Awards. Suriya has featured six times in the Celebrity 100 list of Forbes India, which takes into account the earnings of Indian celebrities.</th>
         </tr>
         </table>
@@ -21,19 +21,19 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/actors/SURYA/ Ayan.jpeg"alt="" height="200" width="150">
+                <img src=" /MEDIA/IMAGES/actors/SURYA/ Ayan.jpeg"alt="" height="200" width="150">
             </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/SURYA/ Ayan.mp3" controls ></audio>
                 </td>
-                <td><img src="../MEDIA/IMAGES/actors/SURYA/7aum Arivu.jpeg"alt="" height="200" 
+                <td><img src=" /MEDIA/IMAGES/actors/SURYA/7aum Arivu.jpeg"alt="" height="200" 
                     width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/SURYA/Yamma Yamma-7aum Arivu.Com.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/actors/SURYA/anjaan2.jpeg"
+                    <img src=" /MEDIA/IMAGES/actors/SURYA/anjaan2.jpeg"
                     alt="" height="200" width="150">
                 </td>
                 
@@ -41,20 +41,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="../MEDIA/IMAGES/actors/SURYA/Etharkkum Thunindhavan.jpeg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/actors/SURYA/Etharkkum Thunindhavan.jpeg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/SURYA/Etharkkum Thunindhavan.mp3" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/actors/SURYA/Ghajini.jpeg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/actors/SURYA/Ghajini.jpeg"alt="" height="200" width="150">
 
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/SURYA/Ghajini.mp3" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/actors/SURYA/Jai Bhim.jpeg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/actors/SURYA/Jai Bhim.jpeg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/SURYA/Jai Bhim.mp3" controls></audio>
@@ -62,19 +62,19 @@
                 </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/actors/SURYA/Jillunnu Oru Kadhal.jpeg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/actors/SURYA/Jillunnu Oru Kadhal.jpeg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/SURYA/Jillunnu Oru Kadhal.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/actors/SURYA/MaattrraaN.jpeg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/actors/SURYA/MaattrraaN.jpeg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/SURYA/Kaal Mulaitha Poovae maatran. mp3.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/actors/SURYA/Vaaranam Aayiram.jpeg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/actors/SURYA/Vaaranam Aayiram.jpeg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/SURYA/Vaaranam Aayiram.mp3" controls></audio>
