--- a/Vairamuthu.html
+++ b/Vairamuthu.html
@@ -10,7 +10,7 @@
     <H2>SPOTSTAR -Vairamuthu </H2>
     <table>
         <tr>
-            <th><img src="../MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/VAIRAMUTHU.jpg" alt="" width="200" height="250"></th>
+            <th><img src=" /MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/VAIRAMUTHU.jpg" alt="" width="200" height="250"></th>
             <th>Vairamuthu Ramasamy (born 13 July 1953)[5] is an Indian lyricist, poet, and novelist working in the Tamil film industry. He is a prominent figure in the Tamil literary world. A master's graduate from the Pachaiyappa's College in Chennai, he first worked as a translator, while also being a published poet. He entered the Tamil film industry in the year 1980, with the film Nizhalgal, an Ilaiyaraaja musical, directed by Bharathiraja. During the course of his 40-year film career, he has written over 7,500 songs and poems which have won him seven National Awards, the most for any Indian lyricist. He has also been honored with a Padma Shri, a Padma Bhushan and a Sahitya Akademi Award,[8] for his abundant literary output. </th>
         </tr>
         </table>
@@ -22,19 +22,19 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/enuyrie.jpg"alt="" height="200" width="150">
+                <img src=" /MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/enuyrie.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/VAIRAMUTHU/En-Uyire.mp3" controls ></audio>
                 </td>
-                <td><img src="../MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/Jeans-1.jpg"alt="" height="200" 
+                <td><img src=" /MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/Jeans-1.jpg"alt="" height="200" 
                     width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/VAIRAMUTHU/Jeans-1.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/Jeans-2.jpg"
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/Jeans-2.jpg"
                     alt="" height="200" width="150">
                 </td>
                 
@@ -42,20 +42,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="../MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/kadhal kaditham.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/kadhal kaditham.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/lyricsist/VAIRAMUTHU/Kadhal-Kaditham.mp3" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/kalayil thinamum.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/kalayil thinamum.jpg"alt="" height="200" width="150">
 
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/lyricsist/VAIRAMUTHU/Kaalaiyil-Dhinamum-MassTamilan.com.mp3" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/Oru poiyathu sol kannae.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/Oru poiyathu sol kannae.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/lyricsist/VAIRAMUTHU/Oru-Poiyavathu.mp3" controls></audio>
@@ -63,19 +63,19 @@
                 </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/Taj-Mahal-1999-500x500.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/Taj-Mahal-1999-500x500.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/VAIRAMUTHU/Chotta-Chotta-Nanayuthu.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/Tham thakka.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/Tham thakka.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/VAIRAMUTHU/Thamthakka-Theenthakka.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/thayya thayya.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/LYRICSIST/VAIRAMUTHU/thayya thayya.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/lyricsist/VAIRAMUTHU/Thaiyya-Thaiyya.mp3" controls></audio>
