--- a/chinmayi.html
+++ b/chinmayi.html
@@ -10,7 +10,7 @@
     <H2>SPOTSTAR - Chinmayi Sripaada </H2>
     <table>
         <tr>
-            <th><img src="../MEDIA/IMAGES/playback singer/chinmayi/chimayi.jpg" alt="" width="200" height="250"></th>
+            <th><img src=" /MEDIA/IMAGES/playback singer/chinmayi/chimayi.jpg" alt="" width="200" height="250"></th>
             <th>Chinmayi Sripaada is an Indian playback singer, sung more than 2500+ songs, working mainly for the South Indian film industry. She is also a voice actor, entrepreneur, composer, television presenter, radio jockey, linguist, and a classical dancer. She is the founder and CEO of a translation services company Blue Elephant, a skincare company importing K-beauty to India - Isle Of Skin, and a medi-spa Deep Skin Dialogues in Chennai and Hyderabad. She is often credited as Chinmayee and Indai Haza (named by composer A. R. Rahman for one of his songs). She rose to fame for her critically acclaimed song "Oru Deivam Thantha Poovae" from the National Award winning movie Kannathil Muthamittal directed by Mani Ratnam and composed by A. R. Rahman. She was 15 years old when she made her singing debut in Kannathil Muthamittal. </th>
         </tr>
         </table>
@@ -22,19 +22,19 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/playback singer/chinmayi/96.jpg"alt="" height="200" width="150">
+                <img src=" /MEDIA/IMAGES/playback singer/chinmayi/96.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/chinmayi/96.mpeg" controls ></audio>
                 </td>
-                <td><img src="../MEDIA/IMAGES/playback singer/chinmayi/adhavan.jpg"alt="" height="200" 
+                <td><img src=" /MEDIA/IMAGES/playback singer/chinmayi/adhavan.jpg"alt="" height="200" 
                     width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/chinmayi/aadhavan.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/chinmayi/ambikavathy.jpg"
+                    <img src=" /MEDIA/IMAGES/playback singer/chinmayi/ambikavathy.jpg"
                     alt="" height="200" width="150">
                 </td>
                 
@@ -42,20 +42,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="../MEDIA/IMAGES/playback singer/chinmayi/enthiran.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/playback singer/chinmayi/enthiran.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/playback singers/chinmayi/enthiran.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/playback singer/chinmayi/ko.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/playback singer/chinmayi/ko.jpg"alt="" height="200" width="150">
 
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/playback singers/chinmayi/ko.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/playback singer/chinmayi/kushi.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/playback singer/chinmayi/kushi.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/playback singers/chinmayi/kushi.mpeg" controls></audio>
@@ -63,19 +63,19 @@
                 </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/chinmayi/okk.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/playback singer/chinmayi/okk.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/chinmayi/okk.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/chinmayi/Thirumanam Enum Nikk.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/playback singer/chinmayi/Thirumanam Enum Nikk.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/chinmayi/ten.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/chinmayi/vtv.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/playback singer/chinmayi/vtv.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/chinmayi/vtv.mpeg" controls></audio>
