--- a/gv.html
+++ b/gv.html
@@ -9,7 +9,7 @@
     <H2>SPOTSTAR - G.V.Prakash Kumar</H2>
     <table>
         <tr>
-            <th><img src="../MEDIA/IMAGES/music directors/GV/gv.jpg" alt="" width="200" height="250"></th>
+            <th><img src=" /MEDIA/IMAGES/music directors/GV/gv.jpg" alt="" width="200" height="250"></th>
             <th>G. V. Prakash Kumar is an Indian music composer, playback singer, actor, and film producer known for his work in Tamil and Telugu films. His first film was S Pictures' Veyil (2006) and he gained fame in Tamil films by the early 2010s.He made his debut in acting on 2015 through Darling. He has won one National Award, three Filmfare Awards and three SIIMA Awards in his film career.</th>
         </tr>
         </table>
@@ -21,19 +21,19 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/music directors/GV/adukalam.jpg"alt="" height="200" width="150">
+                <img src=" /MEDIA/IMAGES/music directors/GV/adukalam.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/GV/ADUKALAM.mpeg" controls ></audio>
                 </td>
-                <td><img src="../MEDIA/IMAGES/music directors/GV/asuran.jpg"alt="" height="200" 
+                <td><img src=" /MEDIA/IMAGES/music directors/GV/asuran.jpg"alt="" height="200" 
                     width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/GV/ASURAN.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/GV/ayirathil oruvan.jpg"
+                    <img src=" /MEDIA/IMAGES/music directors/GV/ayirathil oruvan.jpg"
                     alt="" height="200" width="150">
                 </td>
                 
@@ -41,20 +41,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="../MEDIA/IMAGES/music directors/GV/bachler.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/music directors/GV/bachler.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/music directors/GV/bachlor.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/music directors/GV/Idhu Enna Maayam.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/music directors/GV/Idhu Enna Maayam.jpg"alt="" height="200" width="150">
 
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/music directors/GV/ithu enna mayam.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/music directors/GV/maran.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/music directors/GV/maran.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/music directors/GV/polladhava.mpeg" controls></audio>
@@ -62,19 +62,19 @@
                 </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/GV/rajarani.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/music directors/GV/rajarani.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/GV/raja rani.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/GV/thalaivaa.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/music directors/GV/thalaivaa.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
-                    <audio src="../MEDIA/IMAGES/music directors/GV/thalaivaa.jpg" controls></audio>
+                    <audio src=" /MEDIA/IMAGES/music directors/GV/thalaivaa.jpg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/music directors/GV/theri.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/music directors/GV/theri.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/music directors/GV/theri.mpeg" controls></audio>
