--- a/karthiksinger.html
+++ b/karthiksinger.html
@@ -9,7 +9,7 @@
     <H2>SPOTSTAR - 	Karthik </H2>
     <table>
         <tr>
-            <th><img src="../MEDIA/IMAGES/playback singer/sherayagoshal/sherya goshal.jpg" alt="" width="200" height="250"></th>
+            <th><img src=" /MEDIA/IMAGES/playback singer/sherayagoshal/sherya goshal.jpg" alt="" width="200" height="250"></th>
             <th>Karthik  is an Indian playback singer. Karthik started his professional singing career as a backing vocalist and has since been working as a playback singer. He has sung in multiple languages including Tamil, Telugu, Malayalam, Kannada, Odia, Bengali, Hindi, Marathi, Tulu and Sanskrit.This is only a partial listit is noteworthy that Karthik has sung more than 8000 songs in Telugu, Kannada, Tamil, Malayalam and Hindi.</th>
         </tr>
         </table>
@@ -21,19 +21,19 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/playback singer/karthick/7 aum arivu.jpg"alt="" height="200" width="150">
+                <img src=" /MEDIA/IMAGES/playback singer/karthick/7 aum arivu.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/karthik/munanthy.mpeg" controls ></audio>
                 </td>
-                <td><img src="../MEDIA/IMAGES/playback singer/karthick/anbe sivam.jpg"alt="" height="200" 
+                <td><img src=" /MEDIA/IMAGES/playback singer/karthick/anbe sivam.jpg"alt="" height="200" 
                     width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/karthik/anbe sivam.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/karthick/engeyum kadhal.jpg"
+                    <img src=" /MEDIA/IMAGES/playback singer/karthick/engeyum kadhal.jpg"
                     alt="" height="200" width="150">
                 </td>
                 
@@ -41,20 +41,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="../MEDIA/IMAGES/playback singer/karthick/naan e.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/playback singer/karthick/naan e.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/playback singers/karthik/naan ee.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/playback singer/karthick/ok kanmani.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/playback singer/karthick/ok kanmani.jpg"alt="" height="200" width="150">
 
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/playback singers/karthik/ok kanmani.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/playback singer/karthick/paiya.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/playback singer/karthick/paiya.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/playback singers/karthik/paiyaa.mpeg" controls></audio>
@@ -62,19 +62,19 @@
                 </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/karthick/ravanan.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/playback singer/karthick/ravanan.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/karthik/ravanan.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/karthick/varanam ayiram.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/playback singer/karthick/varanam ayiram.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/karthik/varanam ayiram.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/karthick/yaaradi nee. mohini.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/playback singer/karthick/yaaradi nee. mohini.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/karthik/yaaradineemohini.mpeg" controls></audio>
