--- a/sherya.html
+++ b/sherya.html
@@ -9,7 +9,7 @@
     <H2>SPOTSTAR - 	Shreya Ghoshal </H2>
     <table>
         <tr>
-            <th><img src="../MEDIA/IMAGES/playback singer/sherayagoshal/sherya goshal.jpg" alt="" width="200" height="250"></th>
+            <th><img src=" /MEDIA/IMAGES/playback singer/sherayagoshal/sherya goshal.jpg" alt="" width="200" height="250"></th>
             <th>Shreya Ghoshal (born 12 March 1984) is an Indian singer. Noted for her wide vocal range and versatility, she is one of the most prolific and popular singers of India.She has recorded songs for films and albums in various Indian and foreign languages and received numerous accolades, including five National Film Awards, four Kerala State Film Awards, two Tamil Nadu State Film Awards, two BFJA Awards, seven Filmfare Awards and ten Filmfare Awards South. Often referred as "Queen of Dynamics" for her remarkable vocal expressions, Ghoshal is widely regarded as one of the greatest vocalist of Indian subcontinent.</th>
         </tr>
         </table>
@@ -21,19 +21,19 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/playback singer/sherayagoshal/cobra.jpg"alt="" height="200" width="150">
+                <img src=" /MEDIA/IMAGES/playback singer/sherayagoshal/cobra.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/sheraya goshal/cobra.mpeg" controls ></audio>
                 </td>
-                <td><img src="../MEDIA/IMAGES/playback singer/sherayagoshal/guru.jpg"alt="" height="200" 
+                <td><img src=" /MEDIA/IMAGES/playback singer/sherayagoshal/guru.jpg"alt="" height="200" 
                     width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/sheraya goshal/guru.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/sherayagoshal/jilla.jpg"
+                    <img src=" /MEDIA/IMAGES/playback singer/sherayagoshal/jilla.jpg"
                     alt="" height="200" width="150">
                 </td>
                 
@@ -41,20 +41,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="../MEDIA/IMAGES/playback singer/sherayagoshal/kumki.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/playback singer/sherayagoshal/kumki.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/playback singers/sheraya goshal/kumki.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/playback singer/sherayagoshal/kuruvi.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/playback singer/sherayagoshal/kuruvi.jpg"alt="" height="200" width="150">
 
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/playback singers/sheraya goshal/kuruvi.mpeg" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/playback singer/sherayagoshal/mersal.jpg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/playback singer/sherayagoshal/mersal.jpg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/playback singers/sheraya goshal/mersal.mpeg" controls></audio>
@@ -62,19 +62,19 @@
                 </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/sherayagoshal/neer paravai.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/playback singer/sherayagoshal/neer paravai.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/sheraya goshal/neerparavai.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/sherayagoshal/seemaraja.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/playback singer/sherayagoshal/seemaraja.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/sheraya goshal/seemaraja.mpeg" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/playback singer/sherayagoshal/vinnaithandi varuvaya.jpg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/playback singer/sherayagoshal/vinnaithandi varuvaya.jpg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/playback singers/sheraya goshal/vtv.mpeg" controls></audio>
