--- a/sucessmsg.html
+++ b/sucessmsg.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="../MEDIA/IMAGES/REGISTRATION MSG/CRP-6-Registration-successful.jpg" height="250" width="250">
+    <img src=" /MEDIA/IMAGES/REGISTRATION MSG/CRP-6-Registration-successful.jpg" height="250" width="250">
     <br>
     <h1>SUCCESSFULLY REGISTERED</h1>
     <h3>Enjoy with  SPOTSTAR</h3>
