--- a/vijaysongs.html
+++ b/vijaysongs.html
@@ -9,7 +9,7 @@
     <H2>SPOTSTAR - Vijay</H2>
     <table>
         <tr>
-            <th><img src="../MEDIA/IMAGES/actors/VIJAY/Thalapathy Vijay ❤️.jpeg" alt="" width="200" height="250"></th>
+            <th><img src=" /MEDIA/IMAGES/actors/VIJAY/Thalapathy Vijay ❤️.jpeg" alt="" width="200" height="250"></th>
             <th>Joseph Vijay Chandrasekhar (born 22 June 1974), known professionally as Vijay, is an Indian actor and playback singer who works in Tamil cinema. In a career spanning in just over 3 decades, Vijay has acted in over 65 films and is one of the most commercially successful actors in Tamil cinema with multiple films amongst the highest-grossing Tamil films of all time and is amongst the highest paid actors in India.</th>
         </tr>
         </table>
@@ -22,19 +22,19 @@
     <table>
         <tr>
             <td>
-                <img src="../MEDIA/IMAGES/actors/VIJAY/vijay movie photos/ghilli.jpeg"alt="" height="200" width="150">
+                <img src=" /MEDIA/IMAGES/actors/VIJAY/vijay movie photos/ghilli.jpeg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/vijay songs/VIJAY SONGS/Arjunar Villu.mp3" control ></audio>
                 </td>
-                <td><img src="../MEDIA/IMAGES/actors/VIJAY/vijay movie photos/Mersal_macho_song_images.jpeg"alt="" height="200" 
+                <td><img src=" /MEDIA/IMAGES/actors/VIJAY/vijay movie photos/Mersal_macho_song_images.jpeg"alt="" height="200" 
                     width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/vijay songs/VIJAY SONGS/Maacho.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/actors/VIJAY/vijay movie photos/nanban.jpeg"
+                    <img src=" /MEDIA/IMAGES/actors/VIJAY/vijay movie photos/nanban.jpeg"
                     alt="" height="200" width="150">
                 </td>
                 
@@ -42,20 +42,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="../MEDIA/IMAGES/actors/VIJAY/vijay movie photos/en jeevan.jpeg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/actors/VIJAY/vijay movie photos/en jeevan.jpeg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/vijay songs/VIJAY SONGS/En Jeevan.mp3" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/actors/VIJAY/vijay movie photos/Thalapathy, Asin, kavalan love.jpeg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/actors/VIJAY/vijay movie photos/Thalapathy, Asin, kavalan love.jpeg"alt="" height="200" width="150">
 
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/vijay songs/VIJAY SONGS/Pattam Poochi Koopidum Pothu.mp3" controls></audio>
                     </td>
                     <td>
-                        <img src="../MEDIA/IMAGES/actors/VIJAY/vijay movie photos/thuppaki.jpeg"alt="" height="200" width="150">
+                        <img src=" /MEDIA/IMAGES/actors/VIJAY/vijay movie photos/thuppaki.jpeg"alt="" height="200" width="150">
                     </td>
                     <td>
                         <audio src="../MEDIA/AUDIOS/vijay songs/VIJAY SONGS/Google Google.mp3" controls></audio>
@@ -63,19 +63,19 @@
                 </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/actors/VIJAY/vijay movie photos/ghilli.jpeg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/actors/VIJAY/vijay movie photos/ghilli.jpeg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/vijay songs/VIJAY SONGS/Kokkorakko.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/actors/VIJAY/vijay movie photos/thuppaki.jpeg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/actors/VIJAY/vijay movie photos/thuppaki.jpeg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/vijay songs/VIJAY SONGS/Vennilave.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/actors/VIJAY/vijay movie photos/Vijay + Trisha Ghilli).jpeg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/actors/VIJAY/vijay movie photos/Vijay + Trisha Ghilli).jpeg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/vijay songs/VIJAY SONGS/Appadipodu.mp3" controls></audio>
@@ -83,19 +83,19 @@
             </tr>
             <tr>
                 <td>
-                    <img src="../MEDIA/IMAGES/actors/VIJAY/vijay movie photos/Bigil Box Office Collection day 12.jpeg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/actors/VIJAY/vijay movie photos/Bigil Box Office Collection day 12.jpeg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/vijay songs/VIJAY SONGS/Unakaga.mp3 " controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/actors/VIJAY/vijay movie photos/sachin.jpeg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/actors/VIJAY/vijay movie photos/sachin.jpeg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/vijay songs/VIJAY SONGS/Kannmoodi Thirakkum.mp3" controls></audio>
                 </td>
                 <td>
-                    <img src="../MEDIA/IMAGES/actors/VIJAY/vijay movie photos/atm.jpeg"alt="" height="200" width="150">
+                    <img src=" /MEDIA/IMAGES/actors/VIJAY/vijay movie photos/atm.jpeg"alt="" height="200" width="150">
                 </td>
                 <td>
                     <audio src="../MEDIA/AUDIOS/vijay songs/VIJAY SONGS/Ella Pugazhum.mp3" controls> </audio>
